--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<!DOCTYPE html> <html lang="en"> <head> <title>Street Network Analysis</title> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"> <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script> </head> <body><div class="container mt-3"> <h2>Street Network Analysis</h2> <p>Please select the cities: </p>  <ul class="nav nav-pills"> <li class="nav-item"> <a class="nav-link active" data-bs-toggle="pill" href="#home">Varberg, Sweden</a> </li> <li class="nav-item"> <a class="nav-link" data-bs-toggle="pill" href="#menu1">Helsinki, Finland</a> </li> <li class="nav-item"> <a class="nav-link" data-bs-toggle="pill" href="#menu2">Toronto, Canada</a> </li> </ul><div class="tab-content"> <div id="home" class="container tab-pane active"><br> <h3>Varberg, Sweden</h3><iframe class= "page1" src="map_varberg.html"  title="description" frameborder="0" style="overflow:hidden;height:150%;width:150%" height="150%" width="150%"></iframe></div><div id="menu1" class="container tab-pane fade"><br> <h3>Helsinki, Finland</h3><iframe src="map_helsinki.html"  title="description" width="800" height="500"></iframe></div><div id="menu2" class="container tab-pane fade"><br> <h3>Toronto, Canada</h3><iframe src="map_toronto.html"  title="description" width="800" height="500"></iframe></div></div></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Street Network Analysis</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    </head>
+    <body>
+        <div class="container mt-3">
+            <h2>Street Network Analysis</h2>
+            <p>Please select the cities:</p>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a class="nav-link active" data-bs-toggle="pill" href="#home">Varberg, Sweden</a></li>
+                <li class="nav-item"><a class="nav-link" data-bs-toggle="pill" href="#menu1">Helsinki, Finland</a></li>
+                <li class="nav-item"><a class="nav-link" data-bs-toggle="pill" href="#menu2">Toronto, Canada</a></li>
+            </ul>
+            <div class="tab-content">
+                <div id="home" class="container tab-pane active">
+                    <br />
+                    <h3>Varberg, Sweden</h3>
+                    <iframe class="page1" src="map_varberg.html" title="description" frameborder="0" style="overflow: hidden; height: 100%; width: 100%;"></iframe>
+                </div>
+                <div id="menu1" class="container tab-pane fade">
+                    <br />
+                    <h3>Helsinki, Finland</h3>
+                    <iframe src="map_helsinki.html" title="description" frameborder="0" style="overflow: hidden; height: 100%; width: 100%;"></iframe>
+                </div>
+                <div id="menu2" class="container tab-pane fade">
+                    <br />
+                    <h3>Toronto, Canada</h3>
+                    <iframe src="map_toronto.html" title="description" frameborder="0" style="overflow: hidden; height: 100%; width: 100%;"></iframe>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
