--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
                 <div id="home" class="container tab-pane active">
                     <br />
                     <h3>Varberg, Sweden</h3>
-                    <iframe class="page1" src="map_varberg.html" title="description" frameborder="0" style="overflow: hidden; height: 100%; width: 100%;"></iframe>
+                    <iframe class="page1" src="map_varberg.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
                 </div>
                 <div id="menu1" class="container tab-pane fade">
                     <br />
                     <h3>Helsinki, Finland</h3>
-                    <iframe src="map_helsinki.html" title="description" frameborder="0" style="overflow: hidden; height: 100%; width: 100%;"></iframe>
+                    <iframe class="page1" src="map_helsinki.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
                 </div>
                 <div id="menu2" class="container tab-pane fade">
                     <br />
                     <h3>Toronto, Canada</h3>
-                    <iframe src="map_toronto.html" title="description" frameborder="0" style="overflow: hidden; height: 100%; width: 100%;"></iframe>
+                    <iframe class="page1" src="map_toronto.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
                 </div>
             </div>
         </div>
