--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         document.getElementById('aggregator_name').innerHTML = strUser;
         }
         notEmpty()
-        document.getElementById("field_6").onchange = notEmpty;
+        document.getElementById("city").onchange = notEmpty;
         </script>
     </body>
 </html>
