--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <p>Please select the cities:</p>
             <select class="text_select" id="city" name="city">    
             <option value=" ">- Select -</option>  
-            <option value="Varberg, Sweden">Varberg, Sweden</option>  
-            <option value="Helsinki, Finland">Helsinki, Finland</option>  
-            <option value="Toronto, Canada">Toronto, Canada</option>  
+            <option value="Varberg, Sweden" class="varberg">Varberg, Sweden</option>  
+            <option value="Helsinki, Finland" class="helsinki">Helsinki, Finland</option>  
+            <option value="Toronto, Canada" class="toronto">Toronto, Canada</option>  
             </select>
             <div id="home" class="container">
                 <br />
                 <h3 id="aggregator_name"></h3>
-                <iframe class="cityClass" src="map_helsinki.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
-                <iframe class="cityClass" src="map_varberg.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
-                <iframe class="cityClass" src="map_toronto.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
+                <iframe class="cityClass varberg" src="map_helsinki.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
+                <iframe class="cityClass helsinki" src="map_varberg.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
+                <iframe class="cityClass toronto" src="map_toronto.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
             </div>
         </div>
        
