--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <style>
-        .cityClass {
-          display: none;
-        }
-        </style>
     </head>
     <body>
         <div class="container mt-3">
@@ -25,9 +20,9 @@
             <div id="home" class="container">
                 <br />
                 <h3 id="aggregator_name"></h3>
-                <iframe class="cityClass varberg" src="map_helsinki.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
-                <iframe class="cityClass helsinki" src="map_varberg.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
-                <iframe class="cityClass toronto" src="map_toronto.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
+                <iframe id="varberg" src="map_helsinki.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
+                <iframe id="helsinki" src="map_varberg.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
+                <iframe id="toronto" src="map_toronto.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
             </div>
         </div>
        
@@ -36,6 +31,25 @@
             var e = document.getElementById("city");
             var strUser = e.options[e.selectedIndex].value;
             document.getElementById('aggregator_name').innerHTML = strUser;
+            if (strUser == "Varberg, Sweden") {
+                document.getElementById('varberg').style.display = 'block';
+                document.getElementById('varberg').style.display = 'none';
+                document.getElementById('varberg').style.display = 'none';
+            } else if (strUser == "Helsinki, Finland") {
+                document.getElementById('varberg').style.display = 'none';
+                document.getElementById('varberg').style.display = 'block';
+                document.getElementById('varberg').style.display = 'none';
+              
+            } else if (strUser == "Toronto, Canada") {
+                document.getElementById('varberg').style.display = 'none';
+                document.getElementById('varberg').style.display = 'none';
+                document.getElementById('varberg').style.display = 'block';
+            }
+            else {
+                document.getElementById('varberg').style.display = 'none';
+                document.getElementById('varberg').style.display = 'none';
+                document.getElementById('varberg').style.display = 'none';
+            }
         }
         notEmpty()
         document.getElementById("city").onchange = notEmpty;
