--- a/index.html
+++ b/index.html
@@ -31,6 +31,57 @@
 	</div>	
 		
 		
+		
+		
+		<div class="btn-group dropend">
+			<button class="btn btn-success dropdown-toggle"
+					type="button"
+					data-bs-toggle="dropdown">
+				Click Me!!
+			</button>
+			<ul class="dropdown-menu">
+				<li>
+					<h6 class="dropdown-header
+						text-success">
+						Non Living Things
+					</h6>
+				</li>
+				<li><a class="dropdown-item" href="#">
+						Pencil
+					</a>
+				</li>
+				<li><a class="dropdown-item" href="#">
+						Erazer
+					</a>
+				</li>
+				<li><a class="dropdown-item" href="#">
+						Sharpener
+					</a>
+				</li>
+				<li>
+					<h6 class="dropdown-header
+						text-danger">
+						Living Things
+					</h6>
+				</li>
+				<li><a class="dropdown-item" href="#">
+						Human Beings
+					</a>
+				</li>
+				<li><a class="dropdown-item" href="#">
+						Plants
+					</a>
+				</li>
+				<li><a class="dropdown-item" href="#">
+						Animals
+					</a>
+				</li>
+			</ul>
+		</div>	
+		
+		
+		
+		
             
             <p>Please select the cities:</p>
             <ul class="nav nav-pills">
