--- a/index.html
+++ b/index.html
@@ -33,51 +33,27 @@
 		
 		
 		
-		<div class="btn-group dropend">
-			<button class="btn btn-success dropdown-toggle"
-					type="button"
-					data-bs-toggle="dropdown">
-				Click Me!!
-			</button>
-			<ul class="dropdown-menu">
-				<li>
-					<h6 class="dropdown-header
-						text-success">
-						Non Living Things
-					</h6>
-				</li>
-				<li><a class="dropdown-item" href="#">
-						Pencil
-					</a>
-				</li>
-				<li><a class="dropdown-item" href="#">
-						Erazer
-					</a>
-				</li>
-				<li><a class="dropdown-item" href="#">
-						Sharpener
-					</a>
-				</li>
-				<li>
-					<h6 class="dropdown-header
-						text-danger">
-						Living Things
-					</h6>
-				</li>
-				<li><a class="dropdown-item" href="#">
-						Human Beings
-					</a>
-				</li>
-				<li><a class="dropdown-item" href="#">
-						Plants
-					</a>
-				</li>
-				<li><a class="dropdown-item" href="#">
-						Animals
-					</a>
-				</li>
-			</ul>
-		</div>	
+	<div class="btn-group dropend">
+	<button class="btn btn-success dropdown-toggle"
+			type="button"
+			data-bs-toggle="dropdown">
+		Please select a city  
+	</button>
+	<ul class="dropdown-menu">
+		<li><a class="dropdown-item" href="map_varberg.html">
+				Varberg
+			</a>
+		</li>
+		<li><a class="dropdown-item" href="#">
+				Erazer
+			</a>
+		</li>
+		<li><a class="dropdown-item" href="#">
+				Sharpener
+			</a>
+		</li>
+	</ul>
+</div>			
 		
 		
 		
