--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		Please select a city  
 	</button>
 	<ul class="dropdown-menu">
-		<li><a class="dropdown-item" href="map_varberg.html">
+		<li><a class="dropdown-item" href="map_varberg.html" target="myIframe">
 				Varberg
 			</a>
 		</li>
@@ -69,7 +69,7 @@
                 <div id="home" class="container tab-pane active">
                     <br />
                     <h3>Varberg, Sweden</h3>
-                    <iframe class="page1" src="map_varberg.html" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
+                    <iframe class="page1" src="map_varberg.html" name="myIframe" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
                 </div>
                 
                 <div id="menu1" class="container tab-pane fade">
