--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				data-bs-toggle="dropdown">
 			Please select a city  
 		</button>
-		<ul class="dropdown-menu">
+		<ul class="dropdown-menu"  id="list">
 			<li><a class="dropdown-item" href="map_varberg.html" target="myIframe">
 					Varberg, Sweden
 				</a>
