--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             {
                 items[i].onclick = function(){
                     
-                    document.getElementById("txt").value = this.innerHTML;
+                    document.getElementById("txt").innerHTML = this.innerHTML;
                     
                 };
             }
