--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<style>
-	.iframe-placeholder
-		{
-		   background: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100% 100%"><text fill="%23FF0000" x="50%" y="50%" font-family="\'Lucida Grande\', sans-serif" font-size="24" text-anchor="middle">PLACEHOLDER</text></svg>') 0px 0px no-repeat;
-		}
+	
 	</style>
     </head>
     <body>
@@ -40,8 +37,8 @@
 		<div class="content">
 			<div id="home" class="container tab-pane active">
 				<br />
-				<h3 id="txt"></h3>
-				<iframe class="iframe-placeholder" src="map_varberg.html" name="myIframe" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
+				<h3 id="txt">Varberg, Sweden</h3>
+				<iframe src="map_varberg.html" name="myIframe" title="description" frameborder="0" style="overflow: hidden; height: 580px; width: 100%;"></iframe>
 			</div>
         </div>
         </div>
