--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 					Toronto, Canada
 				</a>
 			</li>
+			<li><a class="dropdown-item" href="map_halmstad.html" target="myIframe">
+					Halmstad, Sweden
+				</a>
+			</li>
 		</ul>
 		</div>			
 		<div class="content">
